Fix for problem with phone alignments

--- a/swipes-lp/less/main.less
+++ b/swipes-lp/less/main.less
@@ -290,7 +290,7 @@ font-family: GothamRounded-Book;
 
   .swipes-iphone img{
       position: relative;
-      margin: -108px 0 0 -30px;
+      //margin: -108px 0 0 -30px;
   }
 }
 
